--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,12 @@
 body {
   background-color: lightblue;
+  font-family: serif;
+}
+
+.jumbotron h1 {
+  text-align: center;
+}
+
+#result {
+  text-align: center;
 }
